--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.4
+  emoji_picker_flutter: ^1.5.2
+  shared_preferences: ^2.1.0
 
 dev_dependencies:
   flutter_test:
