--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   emoji_picker_flutter: ^1.5.2
   shared_preferences: ^2.1.0
   camera: ^0.10.3+2
+  video_player: ^2.6.1
 
 dev_dependencies:
   flutter_test:
