--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.1.0
   camera: ^0.10.3+2
   video_player: ^2.6.1
+  socket_io_client: ^2.0.1
 
 dev_dependencies:
   flutter_test:
