--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   camera: ^0.10.3+2
   video_player: ^2.6.1
   socket_io_client: ^2.0.1
+  logger: ^1.3.0
 
 dev_dependencies:
   flutter_test:
