--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   video_player: ^2.6.1
   socket_io_client: ^2.0.1
   logger: ^1.3.0
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
